# mcp-pinot

./: .dockerignore  .dxtignore  .env.example  .gitignore  .mcpbignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PRIVACY.md  PR_DESCRIPTION.md  README.md  REGISTRY_LISTING.md  SECURITY.md  SUPPORT.md  glama.json  manifest.json  pyproject.toml  pytest.ini  query_simple.sh  query_tables.py  run.sh  server.json  simple_query_builtin.py  smithery.yaml  table_filters.yaml.example  test_query.sh  test_rest_api.sh  user_guide.md
.cursor/rules/: default.mdc
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: setup_python_test_env.sh
.github/workflows/: build-and-test.yml  helm-lint.yml  lint.yml  pages.yml  publish-dxt.yml  publish-pypi.yml  release.yml  security.yml  snyk.yml  test-pinot-quickstart.yml
docs/: index.html
examples/: example_client.py  http_server_demo.py
helm/: README.md  smoke-test.sh
helm/mcp-pinot/: Chart.yaml  values.yaml
helm/mcp-pinot/templates/: _helpers.tpl  certificate.yaml  deployment.yaml  ingressroute.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  secret.yaml  serverstransport.yaml  service.yaml  serviceaccount.yaml
k8s/: README.md  configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
mcp_pinot/: __init__.py  config.py  models.py  pinot_client.py  prompts.py  server.py
mcp_pinot/auth/: __init__.py  oauth.py  static.py
mcp_pinot/utils/: logging_config.py  pinot_client.py
mcp_pinot_ops/: README.md  __init__.py  prompts.py  server.py
mcp_pinot_ops/utils/: __init__.py  pinot_client.py
tests/: conftest.py  test_auth.py  test_config.py  test_connection_diagnostics.py  test_http_integration.py  test_http_live.py  test_http_transport.py  test_path_security.py  test_pinot_client.py  test_query_functionality.py  test_release_metadata.py  test_remote_cluster.py  test_server.py  test_simple_queries.py  test_transport_security.py
tests/mocks/: __init__.py  execute_query.py  mcp.py  pinot_client.py
tests/test_service/: __init__.py  test_pinot_quickstart.py
